fixed missing overflow hidden

--- a/src/components/m-header-mobile-navigation/index.scss
+++ b/src/components/m-header-mobile-navigation/index.scss
@@ -22,6 +22,8 @@
 
 .m-header-mobile-navigation--relative {
   position: relative;
+
+  overflow: hidden;
 }
 
 .m-header-mobile-navigation__nav {
